--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='./docs' react-scripts build",
+    "build": "BUILD_PATH='./docs' REACT_APP_BASE_URL='RickAndMortySite/' react-scripts build",
     "test": "react-scripts test --ci --coverage --watchAll=false",
     "test:watch": "react-scripts test --coverage --watchAll=true",
     "eject": "react-scripts eject",
